# git-flow-strategy

./: README.md  pyproject.toml
src/: calculator.py  main.py
tests/: test_calculator.py
