[project]
name = "gitflowstrategy"
version = "1.1.3"
description = "This project uses the GitFlow branching model to manage features, bugfixes, releases, and hotfixes for a simple calculator class. This document explains the workflow, branch types, and best practices for contributing and maintaining code quality."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]